--- a/project/.gitignore
+++ b/project/.gitignore
@@ -1,39 +1,4 @@
-SHELL=/bin/bash
-QT_ACCESSIBILITY=1
-NVM_INC=/home/ryanwhite04/.config/nvm/versions/node/v15.14.0/include/node
-XDG_CONFIG_HOME=/home/ryanwhite04/.config
-XCURSOR_SIZE=43
-DISPLAY_LOW_DENSITY=:1
-PWD=/home/ryanwhite04/python-urx/project
-LOGNAME=ryanwhite04
-QT_QPA_PLATFORMTHEME=gtk2
-WAYLAND_DISPLAY_LOW_DENSITY=wayland-1
-XCURSOR_SIZE_LOW_DENSITY=21
-SOMMELIER_VERSION=0.20
-HOME=/home/ryanwhite04
-LANG=en_US.UTF-8
-LS_COLORS=rs=0:di=01;34:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01:cd=40;33;01:or=40;31;01:mi=00:su=37;41:sg=30;43:ca=30;41:tw=30;42:ow=34;42:st=37;44:ex=01;32:*.tar=01;31:*.tgz=01;31:*.arc=01;31:*.arj=01;31:*.taz=01;31:*.lha=01;31:*.lz4=01;31:*.lzh=01;31:*.lzma=01;31:*.tlz=01;31:*.txz=01;31:*.tzo=01;31:*.t7z=01;31:*.zip=01;31:*.z=01;31:*.dz=01;31:*.gz=01;31:*.lrz=01;31:*.lz=01;31:*.lzo=01;31:*.xz=01;31:*.zst=01;31:*.tzst=01;31:*.bz2=01;31:*.bz=01;31:*.tbz=01;31:*.tbz2=01;31:*.tz=01;31:*.deb=01;31:*.rpm=01;31:*.jar=01;31:*.war=01;31:*.ear=01;31:*.sar=01;31:*.rar=01;31:*.alz=01;31:*.ace=01;31:*.zoo=01;31:*.cpio=01;31:*.7z=01;31:*.rz=01;31:*.cab=01;31:*.wim=01;31:*.swm=01;31:*.dwm=01;31:*.esd=01;31:*.jpg=01;35:*.jpeg=01;35:*.mjpg=01;35:*.mjpeg=01;35:*.gif=01;35:*.bmp=01;35:*.pbm=01;35:*.pgm=01;35:*.ppm=01;35:*.tga=01;35:*.xbm=01;35:*.xpm=01;35:*.tif=01;35:*.tiff=01;35:*.png=01;35:*.svg=01;35:*.svgz=01;35:*.mng=01;35:*.pcx=01;35:*.mov=01;35:*.mpg=01;35:*.mpeg=01;35:*.m2v=01;35:*.mkv=01;35:*.webm=01;35:*.ogm=01;35:*.mp4=01;35:*.m4v=01;35:*.mp4v=01;35:*.vob=01;35:*.qt=01;35:*.nuv=01;35:*.wmv=01;35:*.asf=01;35:*.rm=01;35:*.rmvb=01;35:*.flc=01;35:*.avi=01;35:*.fli=01;35:*.flv=01;35:*.gl=01;35:*.dl=01;35:*.xcf=01;35:*.xwd=01;35:*.yuv=01;35:*.cgm=01;35:*.emf=01;35:*.ogv=01;35:*.ogx=01;35:*.aac=00;36:*.au=00;36:*.flac=00;36:*.m4a=00;36:*.mid=00;36:*.midi=00;36:*.mka=00;36:*.mp3=00;36:*.mpc=00;36:*.ogg=00;36:*.ra=00;36:*.wav=00;36:*.oga=00;36:*.opus=00;36:*.spx=00;36:*.xspf=00;36:
-VIRTUAL_ENV=/home/ryanwhite04/python-urx/project/env
-WAYLAND_DISPLAY=wayland-0
-INVOCATION_ID=a48fb90462ba4bdcaf4fc8087cd39663
-MANAGERPID=113
-NVM_DIR=/home/ryanwhite04/.config/nvm
-TERM=xterm-256color
-USER=ryanwhite04
-NCURSES_NO_UTF8_ACS=1
-DISPLAY=:0
-SHLVL=1
-NVM_CD_FLAGS=
-LD_ARGV0=/opt/google/cros-containers/bin/vshd
-XDG_RUNTIME_DIR=/run/user/1000
-PS1=(env) \[\e]0;\u@\h: \w\a\]${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ 
-QT_AUTO_SCREEN_SCALE_FACTOR=1
-JOURNAL_STREAM=9:6843
-XCURSOR_THEME=Adwaita
-XDG_DATA_DIRS=/home/ryanwhite04/.local/share:/home/ryanwhite04/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share:/usr/local/share:/usr/share
-BROWSER=/usr/bin/garcon-url-handler
-PATH=/home/ryanwhite04/python-urx/project/env/bin:/home/ryanwhite04/.config/nvm/versions/node/v15.14.0/bin:/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games
-DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
-NVM_BIN=/home/ryanwhite04/.config/nvm/versions/node/v15.14.0/bin
-LD_ARGV0_REL=../bin/vshd
-_=/usr/bin/env
+env
+*.swp
+*.swo
+__pycache__
